--- a/data/cards/07093411.yaml
+++ b/data/cards/07093411.yaml
@@ -74,6 +74,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-EN007
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   - set_number: DTP1-EN028
     set_name: Duel Terminal - Preview Wave 2
     rarities:
@@ -113,6 +117,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-DE007
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR007
     set_name: Force of the Breaker
@@ -140,6 +148,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-FR007
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: FOTB-IT007
     set_name: Force of the Breaker
@@ -171,6 +183,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-IT007
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: LED2-PT042
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -185,6 +201,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-PT007
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: FOTB-JP007
     set_name: Force of the Breaker
