--- a/data/cards/08267140.yaml
+++ b/data/cards/08267140.yaml
@@ -75,6 +75,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SDCB-EN031
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: TDIL-DE065
     set_name: The Dark Illusion
@@ -114,6 +118,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SDCB-DE031
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: TDIL-FR065
     set_name: The Dark Illusion
@@ -153,6 +161,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SDCB-FR031
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: TDIL-IT065
     set_name: The Dark Illusion
@@ -192,6 +204,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SDCB-IT031
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: TDIL-PT065
     set_name: The Dark Illusion
@@ -226,6 +242,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SDCB-PT031
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: TDIL-JP065
     set_name: The Dark Illusion
