--- a/data/cards/09334391.yaml
+++ b/data/cards/09334391.yaml
@@ -48,6 +48,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-EN046
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LED2-DE039
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -55,6 +59,10 @@ sets:
     - Ultra Rare
   - set_number: LDS1-DE112
     set_name: 'Legendary Duelists: Season 1'
+    rarities:
+    - Ultra Rare
+  - set_number: SDCB-DE046
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
   fr:
@@ -66,6 +74,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-FR046
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LED2-IT039
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -75,6 +87,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-IT046
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED2-PT039
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -82,6 +98,10 @@ sets:
     - Ultra Rare
   - set_number: LDS1-PT112
     set_name: 'Legendary Duelists: Season 1'
+    rarities:
+    - Ultra Rare
+  - set_number: SDCB-PT046
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
   ja:
