--- a/data/cards/11136371.yaml
+++ b/data/cards/11136371.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SDCB-EN038
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: DP07-DE024
     set_name: 'Duelist Pack: Jesse Anderson'
@@ -54,6 +58,10 @@ sets:
     - Ultra Rare
   - set_number: LDS1-DE113
     set_name: 'Legendary Duelists: Season 1'
+    rarities:
+    - Common
+  - set_number: SDCB-DE038
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   fr:
@@ -65,6 +73,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SDCB-FR038
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: DP07-IT024
     set_name: 'Duelist Pack: Jesse Anderson'
@@ -74,9 +86,17 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SDCB-IT038
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: LDS1-PT113
     set_name: 'Legendary Duelists: Season 1'
+    rarities:
+    - Common
+  - set_number: SDCB-PT038
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
