--- a/data/cards/12644061.yaml
+++ b/data/cards/12644061.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN028
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: REDU-DE094
     set_name: Return of the Duelist
@@ -68,6 +72,10 @@ sets:
     - Common
   - set_number: SGX1-DEI20
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-DE028
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   fr:
@@ -87,6 +95,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-FR028
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: REDU-IT094
     set_name: Return of the Duelist
@@ -104,6 +116,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT028
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: SHVA-PT056
     set_name: Shadows in Valhalla
@@ -115,6 +131,10 @@ sets:
     - Common
   - set_number: SGX1-PTI20
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT028
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
