--- a/data/cards/14469229.yaml
+++ b/data/cards/14469229.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCB-EN010
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FLOD-DE093
     set_name: Flames of Destruction
@@ -79,6 +83,10 @@ sets:
     - Common
   - set_number: MP19-DE066
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCB-DE010
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   fr:
@@ -90,6 +98,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCB-FR010
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: FLOD-IT093
     set_name: Flames of Destruction
@@ -99,6 +111,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCB-IT010
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: FLOD-PT093
     set_name: Flames of Destruction
@@ -106,6 +122,10 @@ sets:
     - Common
   - set_number: MP19-PT066
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCB-PT010
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
