--- a/data/cards/23384666.yaml
+++ b/data/cards/23384666.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se questa carta viene Evocata Normalmente o Specialmente: puoi prendere 1 mostro Macchina con ATK pari al suo stesso DEF dal tuo Deck e metterlo in cima al tuo Deck. Puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 mostro Macchina con ATK pari al suo stesso DEF nel tuo Cimitero; Evocalo Specialmente in Posizione di Difesa. Puoi utilizzare ogni effetto di "Gizmeck Taniguku, l'Intelletto Immobile" una sola volta per turno.
   pt: |-
-    Se este card for Invocado por Invocação-Normal ou Especial: você pode pegar 1 monstro Máquina cujo ATK seja igual à sua própria DEF do seu Deck e colocá-lo no topo do seu Deck. Você pode banir este card do seu Cemitério e, depois, escolha 1 monstro Máquina no seu Cemitério cujo ATK seja igual à sua própria DEF; Invoque-o por Invocação-Especial em Posição de Defesa. Você só pode usar cada efeito de "Bugiganga Taniguku, o Intelecto Imóvel" uma vez por turno
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode pegar 1 monstro Máquina cujo ATK seja igual à sua própria DEF do seu Deck e colocá-lo no topo do seu Deck. Você pode banir este card do seu Cemitério e, depois, escolha 1 monstro Máquina no seu Cemitério cujo ATK seja igual à sua própria DEF; Invoque-o por Invocação-Especial em Posição de Defesa. Você só pode usar cada efeito de "Bugiganga Taniguku, o Intelecto Imóvel" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから攻撃力と守備力の数値が同じ機械族モンスター１体を選んでデッキの一番上に置く。②：墓地のこのカードを除外し、自分の墓地の攻撃力と守備力の数値が同じ機械族モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
