--- a/data/cards/31044787.yaml
+++ b/data/cards/31044787.yaml
@@ -45,6 +45,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCB-EN039
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: CORE-DE077
     set_name: Clash of Rebellions
@@ -52,6 +56,10 @@ sets:
     - Common
   - set_number: MP16-DE093
     set_name: 2016 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCB-DE039
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   fr:
@@ -63,6 +71,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCB-FR039
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: CORE-IT077
     set_name: Clash of Rebellions
@@ -72,6 +84,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SDCB-IT039
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: CORE-PT077
     set_name: Clash of Rebellions
@@ -79,6 +95,10 @@ sets:
     - Common
   - set_number: MP16-PT093
     set_name: 2016 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SDCB-PT039
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
