--- a/data/cards/32491822.yaml
+++ b/data/cards/32491822.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-EN011
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   - set_number: DR04-EN122
     set_name: Dark Revelation Volume 4
     rarities:
@@ -98,6 +102,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-DE011
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: SOI-FR002
     set_name: Shadow of Infinity
@@ -120,6 +128,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-FR011
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: SOI-IT002
     set_name: Shadow of Infinity
@@ -146,6 +158,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-IT011
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: DUSA-PT097
     set_name: Duelist Saga
@@ -159,6 +175,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-PT011
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: SOI-JP002
     set_name: Shadow of Infinity
