--- a/data/cards/32710364.yaml
+++ b/data/cards/32710364.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN001
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE001
     set_name: Force of the Breaker
@@ -105,6 +109,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-DE001
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR001
     set_name: Force of the Breaker
@@ -128,6 +136,10 @@ sets:
     - Common
   - set_number: SGX1-FRF04
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-FR001
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   it:
@@ -159,6 +171,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT001
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: LED2-PT041
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -170,6 +186,10 @@ sets:
     - Common
   - set_number: SGX1-PTF04
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT001
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
