--- a/data/cards/35726888.yaml
+++ b/data/cards/35726888.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SDCB-EN030
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: RATE-DE065
     set_name: Raging Tempest
@@ -88,6 +92,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SDCB-DE030
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: RATE-FR065
     set_name: Raging Tempest
@@ -113,6 +121,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SDCB-FR030
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: RATE-IT065
     set_name: Raging Tempest
@@ -138,6 +150,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SDCB-IT030
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: RATE-PT065
     set_name: Raging Tempest
@@ -163,6 +179,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SDCB-PT030
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: RATE-JP065
     set_name: Raging Tempest
