--- a/data/cards/36350300.yaml
+++ b/data/cards/36350300.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     This card can be used to Ritual Summon any Ritual Monster from your Deck. You must also Tribute Normal Monsters from your hand whose total Levels equal the Level of the Ritual Monster you Ritual Summon. Shuffle that Ritual Monster into the Deck during your opponent's End Phase. You can only activate 1 "High Ritual Art" per turn.
   de: |-
-    Diese Karte kann verwendet werden, um ein beliebiges Ritualmonster als Ritualbeschwörung von deinem Deck zu beschwören. Du musst zusätzlich Normale Monster von deiner Hand als Tribut anbieten, deren gemeinsame Stufe der Stufe des Ritualmonsters entspricht, das du als Ritualbeschwörung beschwörst. Mische das Ritualmonster während der End Phase deines Gegners ins Deck. Du kannst nur 1 „Hohe Ritualkunst“ pro Spielzug aktivieren.
+    Diese Karte kann verwendet werden, um ein beliebiges Ritualmonster als Ritualbeschwörung von deinem Deck zu beschwören. Du musst zusätzlich Normale Monster von deiner Hand als Tribut anbieten, deren gemeinsame Stufe der Stufe des Ritualmonsters entspricht, das du als Ritualbeschwörung beschwörst. Mische jenes Ritualmonster während der End Phase deines Gegners ins Deck. Du kannst nur 1 „Hohe Ritualkunst“ pro Spielzug aktivieren.
   es: |-
     Esta carta puede ser usada para Invocar por Ritual cualquier Monstruo de Ritual desde tu Deck. Debes también Sacrificar Monstruos Normales en tu mano cuyos Niveles totales sean iguales al Nivel del Monstruo de Ritual que Invocas por Ritual. Baraja ese Monstruo de Ritual al Deck durante la End Phase de tu adversario. Sólo puedes activar 1 "Arte Ritual Elevado" por turno.
   fr: |-
