--- a/data/cards/47121070.yaml
+++ b/data/cards/47121070.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Common
+  - set_number: SDCB-EN035
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: DP07-DE025
     set_name: 'Duelist Pack: Jesse Anderson'
@@ -56,11 +60,19 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Common
+  - set_number: SDCB-DE035
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: DP07-FR025
     set_name: 'Duelist Pack: Jesse Anderson'
     rarities:
     - Rare
+  - set_number: SDCB-FR035
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: DP07-IT025
     set_name: 'Duelist Pack: Jesse Anderson'
@@ -68,6 +80,15 @@ sets:
     - Rare
   - set_number: LCGX-IT172
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
+    rarities:
+    - Common
+  - set_number: SDCB-IT035
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
+  pt:
+  - set_number: SDCB-PT035
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
