--- a/data/cards/63945693.yaml
+++ b/data/cards/63945693.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-EN019
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: LED2-DE038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -56,6 +60,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-DE019
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: LED2-FR038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -65,6 +73,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-FR019
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: LED2-IT038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -74,6 +86,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-IT019
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: LED2-PT038
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -83,6 +99,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-PT019
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: DP19-JP038
     set_name: 'Duelist Pack: Legend Duelist 2'
