--- a/data/cards/72881007.yaml
+++ b/data/cards/72881007.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SDCB-EN022
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE035
     set_name: Force of the Breaker
@@ -80,6 +84,10 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SDCB-DE022
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR035
     set_name: Force of the Breaker
@@ -95,6 +103,10 @@ sets:
     - Secret Rare
   - set_number: LDS1-FR106
     set_name: 'Legendary Duelists: Season 1'
+    rarities:
+    - Common
+  - set_number: SDCB-FR022
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   it:
@@ -118,9 +130,17 @@ sets:
     set_name: 'Legendary Duelists: Season 1'
     rarities:
     - Common
+  - set_number: SDCB-IT022
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: LDS1-PT106
     set_name: 'Legendary Duelists: Season 1'
+    rarities:
+    - Common
+  - set_number: SDCB-PT022
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
