--- a/data/cards/73642296.yaml
+++ b/data/cards/73642296.yaml
@@ -100,6 +100,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-EN015
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FLOD-DE033
     set_name: Flames of Destruction
@@ -125,6 +129,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-DE015
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FLOD-FR033
     set_name: Flames of Destruction
@@ -150,6 +158,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-FR015
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: FLOD-IT033
     set_name: Flames of Destruction
@@ -175,6 +187,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-IT015
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: FLOD-PT033
     set_name: Flames of Destruction
@@ -200,6 +216,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: SDCB-PT015
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: FLOD-JP033
     set_name: Flames of Destruction
