--- a/data/cards/77384395.yaml
+++ b/data/cards/77384395.yaml
@@ -46,7 +46,7 @@ pendulum_effect:
   en: |-
     Once per turn: You can target 1 card in your other Pendulum Zone; this card's Pendulum Scale becomes the Level of that Pendulum Monster Card until the end of this turn, also you cannot Special Summon for the rest of this turn, except by Pendulum Summon.
   de: |-
-    Einmal pro Spielzug: Du kannst 1 Karte in deiner anderen Pendelzone wählen; der Pendelbereich dieser Karte wird bis zum Ende dieses Spielzugs gleich der Stufe der Pendelmonsterkarte, zusätzlich kannst du für den Rest dieses Spielzugs keine Spezialbeschwörungen durchführen, außer als Pendelbeschwörung.
+    Einmal pro Spielzug: Du kannst 1 Karte in deiner anderen Pendelzone wählen; der Pendelbereich dieser Karte wird bis zum Ende dieses Spielzugs gleich der Stufe jener Pendelmonsterkarte, zusätzlich kannst du für den Rest dieses Spielzugs keine Spezialbeschwörungen durchführen, außer als Pendelbeschwörung.
   es: |-
     Una vez por turno: puedes seleccionar 1 carta en tu otra Zona de Péndulo; la Escala de Péndulo de esta carta se convierte en el Nivel de esa Carta de Monstruo de Péndulo hasta el final de este turno, y además no puedes Invocar de Modo Especial por el resto de este turno, excepto con Invocación por Péndulo.
   fr: |-
