--- a/data/cards/87170768.yaml
+++ b/data/cards/87170768.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: SDCB-EN013
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: EXFO-DE037
     set_name: Extreme Force
@@ -68,6 +72,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: SDCB-DE013
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: EXFO-FR037
     set_name: Extreme Force
@@ -81,6 +89,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: SDCB-FR013
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: EXFO-IT037
     set_name: Extreme Force
@@ -94,6 +106,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: SDCB-IT013
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: EXFO-PT037
     set_name: Extreme Force
@@ -107,6 +123,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: SDCB-PT013
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   ja:
   - set_number: EXFO-JP037
     set_name: Extreme Force
