--- a/data/cards/87259933.yaml
+++ b/data/cards/87259933.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN036
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FLOD-DE099
     set_name: Flames of Destruction
@@ -70,6 +74,10 @@ sets:
     - Common
   - set_number: SGX1-DEF20
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-DE036
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   fr:
@@ -89,6 +97,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-FR036
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: FLOD-IT099
     set_name: Flames of Destruction
@@ -106,6 +118,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT036
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: FLOD-PT099
     set_name: Flames of Destruction
@@ -121,6 +137,10 @@ sets:
     - Common
   - set_number: SGX1-PTF20
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT036
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
