--- a/data/cards/89208725.yaml
+++ b/data/cards/89208725.yaml
@@ -58,6 +58,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-EN040
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: CIBR-DE076
     set_name: Circuit Break
@@ -80,6 +84,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-DE040
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: CIBR-FR076
     set_name: Circuit Break
@@ -102,6 +110,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-FR040
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   it:
   - set_number: CIBR-IT076
     set_name: Circuit Break
@@ -124,6 +136,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-IT040
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: CIBR-PT076
     set_name: Circuit Break
@@ -139,6 +155,10 @@ sets:
     - Super Rare
   - set_number: SDCH-PT034
     set_name: 'Structure Deck: Spirit Charmers'
+    rarities:
+    - Common
+  - set_number: SDCB-PT040
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
