--- a/data/cards/08275702.yaml
+++ b/data/cards/08275702.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN023
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE036
     set_name: Force of the Breaker
@@ -80,6 +84,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-DE023
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR036
     set_name: Force of the Breaker
@@ -95,6 +103,10 @@ sets:
     - Secret Rare
   - set_number: SGX1-FRF13
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-FR023
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   it:
@@ -118,9 +130,17 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT023
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: SGX1-PTF13
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT023
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
