--- a/data/cards/10004783.yaml
+++ b/data/cards/10004783.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN025
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: DP07-DE019
     set_name: 'Duelist Pack: Jesse Anderson'
@@ -88,6 +92,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-DE025
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: DP07-FR019
     set_name: 'Duelist Pack: Jesse Anderson'
@@ -107,6 +115,10 @@ sets:
     - Common
   - set_number: SGX1-FRF14
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-FR025
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   it:
@@ -134,6 +146,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT025
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: LED2-PT044
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -145,6 +161,10 @@ sets:
     - Common
   - set_number: SGX1-PTF14
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT025
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
