--- a/data/cards/21698716.yaml
+++ b/data/cards/21698716.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN006
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE006
     set_name: Force of the Breaker
@@ -93,6 +97,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-DE006
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR006
     set_name: Force of the Breaker
@@ -112,6 +120,10 @@ sets:
     - Common
   - set_number: SGX1-FRF07
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-FR006
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   it:
@@ -139,6 +151,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT006
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: OP07-PT035
     set_name: OTS Tournament Pack 7
@@ -150,6 +166,10 @@ sets:
     - Common
   - set_number: SGX1-PTF07
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT006
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
