--- a/data/cards/36795102.yaml
+++ b/data/cards/36795102.yaml
@@ -51,9 +51,17 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-EN044
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GFP2-DE001
     set_name: 'Ghosts From the Past: The 2nd Haunting'
+    rarities:
+    - Ultra Rare
+  - set_number: SDCB-DE044
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
   fr:
@@ -61,14 +69,26 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-FR044
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GFP2-IT001
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: SDCB-IT044
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GFP2-PT001
     set_name: 'Ghosts From the Past: The 2nd Haunting'
+    rarities:
+    - Ultra Rare
+  - set_number: SDCB-PT044
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
   ja:
