--- a/data/cards/37440988.yaml
+++ b/data/cards/37440988.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN043
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Super Rare
   de:
   - set_number: LED2-DE037
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -88,6 +92,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-DE043
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Super Rare
   fr:
   - set_number: LED2-FR037
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -101,6 +109,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-FR043
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Super Rare
   it:
   - set_number: LED2-IT037
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -114,6 +126,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT043
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Super Rare
   pt:
   - set_number: LED2-PT037
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -127,6 +143,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-PT043
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP19-JP037
     set_name: 'Duelist Pack: Legend Duelist 2'
