--- a/data/cards/60876124.yaml
+++ b/data/cards/60876124.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN026
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE033
     set_name: Force of the Breaker
@@ -88,6 +92,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-DE026
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR033
     set_name: Force of the Breaker
@@ -108,6 +116,10 @@ sets:
     - Common
   - set_number: SGX1-FRF11
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-FR026
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   it:
@@ -136,6 +148,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT026
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: OP07-PT018
     set_name: OTS Tournament Pack 7
@@ -147,6 +163,10 @@ sets:
     - Common
   - set_number: SGX1-PTF11
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT026
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
