--- a/data/cards/63144961.yaml
+++ b/data/cards/63144961.yaml
@@ -21,31 +21,34 @@ text:
     ● This turn, each time it destroys an opponent's monster by battle, inflict damage to your opponent equal to the destroyed monster's original ATK.
     You can only activate 1 "Majestic Absorption" per turn.
   de: |-
-    Wähle 1 „Sternenstaubdrache“ oder 1 Synchromonster, das „Sternenstaubdrache“ in seinem Text aufführt, den oder das du kontrollierst, und dann 1 dieser Effekte aktivieren;
+    Wähle 1 „Sternenstaubdrache“ oder 1 Synchromonster, das ihn erwähnt, den oder das du kontrollierst, dann aktiviere 1 dieser Effekte;
     ● Rüste das gewählte Ziel mit 1 offenem Monster aus, das dein Gegner kontrolliert.
     ● Er oder es kann in diesem Spielzug direkt angreifen.
     ● Jedes Mal, wenn er oder es in diesem Spielzug ein Monster eines Gegners durch Kampf zerstört, füge deinem Gegner Schaden in Höhe der Grund-ATK des zerstörten Monsters zu.
     Du kannst nur 1 „Majestätische Absorption“ pro Spielzug aktivieren.
+    Du kannst nur 1 „Majestätische Absorption“ pro Spielzug aktivieren.
   es: |-
-    Selecciona 1 "Dragón de Polvo de Estrellas", o 1 Monstruo de Sincronía que liste "Dragón de Polvo de Estrellas" en su texto, que controles, y después activa 1 de estos efectos;
-    ● Equipa a ese objetivo 1 monstruo boca arriba que controle tu adversario.
+    Selecciona 1 "Dragón de Polvo de Estrellas", o 1 Monstruo de Sincronía que lo mencione, que controles, y después activa 1 de estos efectos;
+    ● Equipa 1 monstruo boca arriba que controle tu adversario a ese objetivo.
     ● Éste puede atacar directamente este turno.
     ● Este turno, cada vez que éste destruya un monstruo del adversario en batalla, inflige daño a tu adversario igual al ATK original del monstruo destruido.
     Sólo puedes activar 1 "Absorción Majestuosa" por turno.
   fr: |-
-    Ciblez 1 "Dragon Poussière d'Étoile" ou 1 Monstre Synchro qui liste "Dragon Poussière d'Étoile" dans son texte que vous contrôlez, puis activez 1 de ces effets ;
+    Ciblez 1 "Dragon Poussière d'Étoile" ou 1 Monstre Synchro qui le mentionne que vous contrôlez, puis activez 1 de ces effets ;
     ● Équipez 1 monstre face recto contrôlé par votre adversaire à la cible.
     ● Ce tour, il peut attaquer directement.
     ● Ce tour, chaque fois qu'il détruit un monstre de l'adversaire au combat, infligez des dommages à votre adversaire égaux à l'ATK d'origine du monstre détruit.
     Vous ne pouvez activer qu'1 "Absorption Majestueuse" par tour.
+    Vous ne pouvez activer qu'1 "Absorption Majestueuse" par tour.
   it: |-
-    Scegli come bersaglio 1 "Drago Polvere di Stelle", o 1 Mostro Synchro che indica "Drago Polvere di Stelle" nel suo testo, che controlli, poi attiva 1 di questi effetti;
+    Scegli come bersaglio 1 "Drago Polvere di Stelle", o 1 Mostro Synchro che lo menziona, che controlli, poi attiva 1 di questi effetti;
     ● Equipaggia 1 mostro scoperto controllato dal tuo avversario a quel bersaglio.
     ● Esso può attaccare direttamente in questo turno.
     ● In questo turno, ogni volta che esso distrugge un mostro dell'avversario in battaglia, infliggi al tuo avversario danno pari all'ATK originale del mostro distrutto.
     Puoi attivare solo 1 "Assorbimento Maestoso" per turno.
+    Puoi attivare solo 1 "Assorbimento Maestoso" per turno.
   pt: |-
-    Escolha 1 "Dragão da Poeira Estelar", ou 1 Monstro Sincro que liste "Dragão da Poeira Estelar" em seu texto, que você controla e, depois, ative 1 desses efeitos;
+    Escolha 1 "Dragão da Poeira Estelar" ou 1 Monstro Sincro que o mencione que você controla e, depois, ative 1 desses efeitos;
     ● Equipe 1 monstro com a face para cima que seu oponente controla ao alvo.
     ● Ele pode atacar diretamente neste turno.
     ● Neste turno, sempre que ele destruir um monstro do oponente em batalha, cause dano ao seu oponente igual ao ATK original do monstro destruído.
