--- a/data/cards/79856792.yaml
+++ b/data/cards/79856792.yaml
@@ -80,6 +80,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-EN041
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TAEV-DE006
     set_name: Tactical Evolution
@@ -111,6 +115,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-DE041
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TAEV-FR006
     set_name: Tactical Evolution
@@ -138,6 +146,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-FR041
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TAEV-IT006
     set_name: Tactical Evolution
@@ -169,6 +181,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-IT041
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED2-PT043
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -183,6 +199,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SDCB-PT041
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: TAEV-JP006
     set_name: Tactical Evolution
