--- a/data/cards/95326659.yaml
+++ b/data/cards/95326659.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-EN020
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   de:
   - set_number: FOTB-DE032
     set_name: Force of the Breaker
@@ -92,6 +96,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-DE020
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   fr:
   - set_number: FOTB-FR032
     set_name: Force of the Breaker
@@ -111,6 +119,10 @@ sets:
     - Common
   - set_number: SGX1-FRI18
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-FR020
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   it:
@@ -138,6 +150,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SDCB-IT020
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+    - Common
   pt:
   - set_number: LDS1-PT102
     set_name: 'Legendary Duelists: Season 1'
@@ -145,6 +161,10 @@ sets:
     - Common
   - set_number: SGX1-PTI18
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SDCB-PT020
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Common
   ja:
