--- a/data/cards/98020526.yaml
+++ b/data/cards/98020526.yaml
@@ -20,27 +20,27 @@ text:
     ● Banish 1 monster from your opponent's field or GY.
     ● Any damage you take this turn is halved.
   de: |-
-    Falls eine offene Karte, die du kontrollierst, das Spielfeld durch deinen Karteneffekt verlässt oder um den Effekt deiner Karte zu aktivieren, und die Karte, die das Spielfeld verlassen hat, „Sternenstaubdrache“ oder ein Synchromonster war, das „Sternenstaubdrache“ in seinem Text aufführt: Du kannst 1 der folgenden Effekte ausführen, aber du kannst denselben Effekt von „Majestätisches Trugbild“ in diesem Spielzug nicht noch einmal ausführen.
-    ● Beschwöre 1 der Monster als Spezialbeschwörung.
+    Falls eine offene Karte, die du kontrollierst, das Spielfeld durch deinen Karteneffekt verlässt oder um den Effekt deiner Karte zu aktivieren, und die Karte, die das Spielfeld verlassen hat, „Sternenstaubdrache“ oder ein Synchromonster war, das ihn erwähnt: Du kannst 1 der folgenden Effekte ausführen, aber du kannst denselben Effekt von „Majestätisches Trugbild“ in diesem Spielzug nicht noch einmal ausführen.
+    ● Beschwöre 1 jener Monster als Spezialbeschwörung.
     ● Verbanne 1 Monster von der Spielfeldseite oder dem Friedhof deines Gegners.
     ● Schaden, den du in diesem Spielzug erhältst, wird halbiert.
   es: |-
-    Si una carta boca arriba que controlas deja el Campo por efecto de tu carta, o para activar el efecto de tu carta, y la carta que dejó el Campo era "Dragón de Polvo de Estrellas" o un Monstruo de Sincronía que liste "Dragón de Polvo de Estrellas" en su texto: puedes aplicar 1 de los siguientes efectos, pero no puedes aplicar ese mismo efecto de "Espejismo Majestuoso" de nuevo este turno.
+    Si una carta boca arriba que controlas deja el Campo por efecto de tu carta, o para activar el efecto de tu carta, y la carta que dejó el Campo era "Dragón de Polvo de Estrellas" o un Monstruo de Sincronía que lo mencione: puedes aplicar 1 de los siguientes efectos, pero no puedes aplicar ese mismo efecto de "Espejismo Majestuoso" de nuevo este turno.
     ● Invoca de Modo Especial 1 de esos monstruos.
     ● Destierra 1 monstruo en el Campo o Cementerio de tu adversario.
     ● Cualquier daño que recibas este turno se divide a la mitad.
   fr: |-
-    Si une carte face recto que vous contrôlez quitte le Terrain par votre effet de carte, ou pour activer l'effet de votre carte, et que la carte qui a quitté le Terrain était "Dragon Poussière d'Étoile" ou un Monstre Synchro qui listait "Dragon Poussière d'Étoile" dans son texte : vous pouvez appliquer 1 des effets suivants, mais vous ne pouvez pas appliquer le même effet de "Mirage Majestueux" de nouveau ce tour.
+    Si une carte face recto que vous contrôlez quitte le Terrain par votre effet de carte, ou pour activer l'effet de votre carte, et que la carte qui a quitté le Terrain était "Dragon Poussière d'Étoile" ou un Monstre Synchro qui le mentionnait : vous pouvez appliquer 1 des effets suivants, mais vous ne pouvez pas appliquer le même effet de "Mirage Majestueux" de nouveau ce tour.
     ● Invoquez Spécialement 1 de ces monstres.
     ● Bannissez 1 monstre depuis le Terrain ou Cimetière de votre adversaire.
     ● Les dommages que vous recevez ce tour sont divisés par deux.
   it: |-
-    Se una carta scoperta che controlli lascia il Terreno per l'effetto di una tua carta, o per attivare l'effetto di una tua carta, e la carta che ha lasciato il Terreno era "Drago Polvere di Stelle" o un Mostro Synchro che indicava "Drago Polvere di Stelle" nel suo testo: puoi applicare 1 dei seguenti effetti, ma non puoi applicare quello stesso effetto di "Miraggio Maestoso" di nuovo in questo turno.
+    Se una carta scoperta che controlli lascia il Terreno per l'effetto di una tua carta, o per attivare l'effetto di una tua carta, e la carta che ha lasciato il Terreno era "Drago Polvere di Stelle" o un Mostro Synchro che lo menzionava: puoi applicare 1 dei seguenti effetti, ma non puoi applicare quello stesso effetto di "Miraggio Maestoso" di nuovo in questo turno.
     ● Evoca Specialmente 1 di quei mostri.
     ● Bandisci 1 mostro dal Terreno o Cimitero del tuo avversario.
     ● Qualsiasi danno che subisci in questo turno viene dimezzato.
   pt: |-
-    Se um card com a face para cima que você controla deixar o campo devido a um efeito de card seu, ou para ativar o efeito de um card seu, e o card que deixou o campo foi "Dragão da Poeira Estelar" ou um Monstro Sincro que liste "Dragão da Poeira Estelar" em seu texto: você pode aplicar 1 dos seguintes efeitos, mas você não pode aplicar esse mesmo efeito de "Miragem Majestosa" novamente neste turno.
+    Se um card com a face para cima que você controla deixar o campo devido a um efeito de card seu, ou para ativar o efeito de um card seu, e o card que deixou o campo foi "Dragão da Poeira Estelar" ou um Monstro Sincro que o mencionou: você pode aplicar 1 dos seguintes efeitos, mas você não pode aplicar esse mesmo efeito de "Miragem Majestosa" novamente neste turno.
     ● Invoque por Invocação-Especial 1 desses monstros.
     ● Bana 1 monstro do campo ou Cemitério do seu oponente.
     ● Qualquer dano que você sofrer neste turno é diminuído pela metade.
