--- a/data/cards/15754711.yaml
+++ b/data/cards/15754711.yaml
@@ -88,6 +88,12 @@ sets:
     set_name: Ignition Assault
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: IGAS-KR064
     set_name: Ignition Assault
