--- a/data/cards/26096328.yaml
+++ b/data/cards/26096328.yaml
@@ -122,6 +122,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Ultra Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DP21-KR034
     set_name: 'Duelist Pack: Legend Duelist 4'
