--- a/data/cards/32600024.yaml
+++ b/data/cards/32600024.yaml
@@ -99,6 +99,12 @@ sets:
     - Super Rare
     - Secret Rare
     - 20th Secret Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: ETCO-KR026
     set_name: Eternity Code
