--- a/data/cards/40110009.yaml
+++ b/data/cards/40110009.yaml
@@ -69,6 +69,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DBMF-KR025
     set_name: 'Deck Build Pack: Mystic Fighters'
