--- a/data/cards/41232647.yaml
+++ b/data/cards/41232647.yaml
@@ -107,6 +107,8 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
     - Prismatic Secret Rare
   ko:
   - set_number: DBMF-KR022
