--- a/data/cards/51126152.yaml
+++ b/data/cards/51126152.yaml
@@ -138,6 +138,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: PP10-KR044
     set_name: Premium Pack Vol.10
