--- a/data/cards/52481437.yaml
+++ b/data/cards/52481437.yaml
@@ -128,6 +128,12 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DP21-KR035
     set_name: 'Duelist Pack: Legend Duelist 4'
