--- a/data/cards/57416183.yaml
+++ b/data/cards/57416183.yaml
@@ -88,6 +88,12 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: ROTD-KR077
     set_name: Rise of the Duelist
