--- a/data/cards/61692648.yaml
+++ b/data/cards/61692648.yaml
@@ -92,6 +92,12 @@ sets:
     set_name: 'Collectors Pack: Duelist of Legend Version'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CPL1-KR036
     set_name: 'Collectors Pack: Duelist of Legend Version'
