--- a/data/cards/79371769.yaml
+++ b/data/cards/79371769.yaml
@@ -86,6 +86,12 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Normal Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: BODE-KR080
     set_name: Burst of Destiny
