--- a/data/cards/00146746.yaml
+++ b/data/cards/00146746.yaml
@@ -98,6 +98,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: LVP2-KR051
     set_name: LINK VRAINS Pack 2
