--- a/data/cards/07080743.yaml
+++ b/data/cards/07080743.yaml
@@ -99,6 +99,12 @@ sets:
     set_name: 'Collectors Pack: Duelist of Legend Version'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CPL1-KR037
     set_name: 'Collectors Pack: Duelist of Legend Version'
