--- a/data/cards/13647631.yaml
+++ b/data/cards/13647631.yaml
@@ -116,6 +116,12 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: EP15-KR043
     set_name: Extra Pack 2015
