--- a/data/cards/16960120.yaml
+++ b/data/cards/16960120.yaml
@@ -92,6 +92,12 @@ sets:
     set_name: 'Deck Build Pack: Mystic Fighters'
     rarities:
     - Super Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DBMF-KR018
     set_name: 'Deck Build Pack: Mystic Fighters'
