--- a/data/cards/24799107.yaml
+++ b/data/cards/24799107.yaml
@@ -105,6 +105,12 @@ sets:
     - Secret Rare
     - 20th Secret Rare
     - Ultimate Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: ETCO-KR041
     set_name: Eternity Code
