--- a/data/cards/24919805.yaml
+++ b/data/cards/24919805.yaml
@@ -102,6 +102,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CPL1-KR048
     set_name: 'Collectors Pack: Duelist of Legend Version'
