--- a/data/cards/25274141.yaml
+++ b/data/cards/25274141.yaml
@@ -114,6 +114,12 @@ sets:
     - Super Rare
     - Secret Rare
     - Collectors Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DP21-KR037
     set_name: 'Duelist Pack: Legend Duelist 4'
