--- a/data/cards/34475451.yaml
+++ b/data/cards/34475451.yaml
@@ -116,6 +116,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CPL1-KR038
     set_name: 'Collectors Pack: Duelist of Legend Version'
