--- a/data/cards/40398073.yaml
+++ b/data/cards/40398073.yaml
@@ -112,6 +112,12 @@ sets:
     set_name: 'Deck Build Pack: Mystic Fighters'
     rarities:
     - Super Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DBMF-KR014
     set_name: 'Deck Build Pack: Mystic Fighters'
