--- a/data/cards/49032236.yaml
+++ b/data/cards/49032236.yaml
@@ -153,6 +153,12 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: EP15-KR055
     set_name: Extra Pack 2015
