--- a/data/cards/49121795.yaml
+++ b/data/cards/49121795.yaml
@@ -83,6 +83,12 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RATE-KR050
     set_name: Raging Tempest
