--- a/data/cards/49575521.yaml
+++ b/data/cards/49575521.yaml
@@ -85,6 +85,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DBMF-KR017
     set_name: 'Deck Build Pack: Mystic Fighters'
