--- a/data/cards/51369889.yaml
+++ b/data/cards/51369889.yaml
@@ -89,6 +89,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DP21-KR038
     set_name: 'Duelist Pack: Legend Duelist 4'
