--- a/data/cards/56910167.yaml
+++ b/data/cards/56910167.yaml
@@ -178,6 +178,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: PP07-KR019
     set_name: Premium Pack Vol.7
