--- a/data/cards/73580471.yaml
+++ b/data/cards/73580471.yaml
@@ -40,8 +40,8 @@ text:
     ①: 이 카드가 싱크로 소환에 성공했을 때에 발동할 수 있다. 필드의 카드를 전부 파괴한다. ②: 1턴에 1번, 자신 묘지에서 식물족 몬스터 1장을 제외하고, 상대 필드의 수비 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 상대의 수비 표시 몬스터를 앞면 공격 표시로 하고, 그 공격력은 턴 종료시까지 0 이 된다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    ①：这张卡同调召唤成功时才能发动。场上的卡全部破坏。②：1回合1次，从自己墓地把1只植物族怪兽除外，以对方场上1只守备表示怪兽为对象才能发动。那只对方的守备表示怪兽变成表侧攻击表示，那个攻击力直到回合结束时变成0。
+    协调＋1只以上协调以外的怪兽
+    ①：此卡同步召唤成功时可以发动。将场上的卡全部破坏。②：1回合1次，从自己的墓地将1只植物族怪兽除外，以对手场上的1只守备表示怪兽为对象可以发动。将对手的该守备表示怪兽改为表侧攻击表示，其攻击力直至回合结束时为止变为0。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: FIRE
@@ -347,6 +347,11 @@ sets:
     - Common
   - set_number: LIOV-KRS02
     set_name: Lightning Overdrive +1 Bonus Pack
+    rarities:
+    - Prismatic Secret Rare
+  zh-CN:
+  - set_number: DP21-SC040
+    set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Prismatic Secret Rare
 limit_regulation:
