--- a/data/cards/76136345.yaml
+++ b/data/cards/76136345.yaml
@@ -112,6 +112,12 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: EP15-KR059
     set_name: Extra Pack 2015
