--- a/data/cards/78231355.yaml
+++ b/data/cards/78231355.yaml
@@ -88,6 +88,12 @@ sets:
     set_name: 'Deck Build Pack: Mystic Fighters'
     rarities:
     - Super Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: DBMF-KR023
     set_name: 'Deck Build Pack: Mystic Fighters'
