--- a/data/cards/79850798.yaml
+++ b/data/cards/79850798.yaml
@@ -108,6 +108,12 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Rare
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: GAOV-KR016
     set_name: Galactic Overlord
