--- a/data/cards/97520701.yaml
+++ b/data/cards/97520701.yaml
@@ -128,6 +128,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
+  - set_number: SLF1-JP???
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: PP10-KR045
     set_name: Premium Pack Vol.10
