--- a/data/cards/yugipedia900388.yaml
+++ b/data/cards/yugipedia900388.yaml
@@ -32,6 +32,9 @@ sets:
   - set_number: SLF1-JP099
     set_name: Selection 5
     rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
