--- a/data/cards/80230510.yaml
+++ b/data/cards/80230510.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 被埋葬的牲祭
 text:
   en: |-
-    You cannot Special Summon for the rest of this turn. Once during this turn, you can conduct a Tribute Summon that requires 2 Tributes by banishing 1 monster from each Graveyard instead of Tributing (it is still treated as a Tribute Summon).
+    Once during this turn, you can Tribute Summon a monster that requires 2 Tributes by banishing 1 monster from each GY instead, also you cannot Special Summon monsters for the rest of this turn.
   de: |-
     Du kannst für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung beschwören. Einmal während dieses Spielzugs kannst du eine Tributbeschwörung durchführen, die 2 Tribute erfordert, indem du 1 Monster von jedem Friedhof verbannst, anstatt Tribut anzubieten. (Sie wird weiterhin als Tributbeschwörung behandelt.)
   es: |-
@@ -41,26 +41,46 @@ sets:
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Super Rare
+  - set_number: LART-EN053
+    set_name: The Lost Art Promotion 2022 K
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DPRP-DE010
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Super Rare
+  - set_number: LART-DE053
+    set_name: The Lost Art Promotion 2022 K
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DPRP-FR010
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Super Rare
+  - set_number: LART-FR053
+    set_name: The Lost Art Promotion 2022 K
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DPRP-IT010
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Super Rare
+  - set_number: LART-IT053
+    set_name: The Lost Art Promotion 2022 K
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DPRP-PT010
     set_name: 'Duelist Pack: Rivals of the Pharaoh'
     rarities:
     - Super Rare
+  - set_number: LART-PT053
+    set_name: The Lost Art Promotion 2022 K
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP17-JP009
     set_name: "Duelist Pack: Pharaoh's Memories"
