--- a/data/cards/85182315.yaml
+++ b/data/cards/85182315.yaml
@@ -66,6 +66,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 897306
