--- a/data/cards/39392286.yaml
+++ b/data/cards/39392286.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 퍼퓨머
   ko_rr: Haepi Peopyumeo
   zh-TW:
-  zh-CN: 鹰身调香师
+  zh-CN: 神鹰调香师
 text:
   en: |-
     This card's name becomes "Harpie Lady" while on the field or in the GY. If this card is Normal or Special Summoned: You can add 1 Spell/Trap from your Deck to your hand that specifically lists the card "Harpie Lady Sisters" in its text. If you controlled a Level 5 or higher "Harpie" monster when you activated this effect, you can also add a second such card, with a different name from the first. You can only use this effect of "Harpie Perfumer" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로 취급한다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "해피 레이디 세자매"의 카드명이 쓰여진 마법 / 함정 카드 1장을 패에 넣는다. 자신 필드에 레벨 5 이상의 "해피" 몬스터가 존재하는 상태에서 발동했을 경우에는 그 매수는 2장까지가 된다(같은 이름의 카드는 1장까지).
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。
-    ①：这张卡的卡名只要在场上·墓地存在当作「鹰身女郎」使用。
-    ②：这张卡召唤·特殊召唤成功的场合才能发动。从卡组把有「鹰身女郎三姐妹」的卡名记述的1张魔法·陷阱卡加入手卡。自己场上有5星以上的「鹰身」怪兽存在的状态发动的场合那个数量改成最多2张（同名卡最多1张）。
+    此卡名的②效果1回合仅可使用1次。①：此卡只要存在于场上・墓地，卡名视为"神鹰女郎"。②：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将1张记载有"神鹰女郎三姐妹"卡名的魔法・陷阱卡加入手牌。在自己场上有等级5以上"神鹰"怪兽存在的状态下发动的情况下，其张数变为最多2张（同名卡最多1张）。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WIND
@@ -99,6 +97,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: DP21-SC001
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
