--- a/data/cards/66386380.yaml
+++ b/data/cards/66386380.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 오라클
   ko_rr: Haepi Orakeul
   zh-TW:
-  zh-CN: 鹰身先知
+  zh-CN: 神鹰预见师
 text:
   en: |-
     This card's name becomes "Harpie Lady" while on the field or in the GY. You can only use each of these effects of "Harpie Oracle" once per turn.
@@ -44,10 +44,7 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로 취급한다. ②: 자신 필드에 레벨 5 이상의 "해피" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ③: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 이 턴의 엔드 페이즈에, 자신 묘지에서 "해피 레이디 세자매"의 카드명이 쓰여진 마법 / 함정 카드 1장을 골라 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②③的效果1回合各能使用1次。
-    ①：这张卡的卡名只要在场上·墓地存在当作「鹰身女郎」使用。
-    ②：自己场上有5星以上的「鹰身」怪兽存在的场合才能发动。这张卡从手卡特殊召唤。
-    ③：这张卡召唤·特殊召唤成功的场合才能发动。这个回合的结束阶段，从自己墓地选有「鹰身女郎三姐妹」的卡名记述的1张魔法·陷阱卡加入手卡。
+    此卡名的②③效果1回合仅可各使用1次。①：此卡只要存在于场上・墓地，卡名视为"神鹰女郎"。②：自己场上有等级5以上"神鹰"怪兽存在的情况下可以发动。从手牌将此卡特殊召唤。③：此卡召唤・特殊召唤成功的情况下可以发动。在此回合的结束阶段，从自己的墓地挑选1张记载有"神鹰女郎三姐妹"卡名的魔法・陷阱卡加入手牌。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WIND
@@ -112,6 +109,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DP21-SC002
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
